k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitalsync-backend
spec:
  # Pourquoi 2 réplicas ? Pour garantir la Haute Disponibilité (HA) et la répartition de charge.
  replicas: 2
  selector:
    matchLabels:
      app: vitalsync-backend
  template:
    metadata:
      labels:
        app: vitalsync-backend
    spec:
      containers:
      - name: backend
        image: nabilsaied15/vitalsync-api:latest
        ports:
        - containerPort: 3000
        # Liveness probe : à quoi elle sert ? détecte si le conteneur est toujours vivant.
        # Si elle échoue, Kubernetes redémarre le pod (self-healing).
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        # Injection du Secret
