k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitalsync-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # Ingress : Rendre le front-end accessible de l'extérieur via une URL HTTP
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vitalsync-frontend-service
            port:
              number: 80
